# ocr

./: .gitignore  CLAUDE.md  README.md  action_ezocr.py  action_space.py  action_tess.py  action_vietocr.py  llm_correct.py  pyproject.toml  requirements.txt  train.py  vndiacritic.py
results/easyocr/: 0_00_09_551__0_00_10_801_1000006311280007212800720.txt  0_00_17_392__0_00_19_435_1000006441280005612800720.txt  0_00_25_400__0_00_30_696_2000005901280011312800720.txt  0_00_30_697__0_00_32_865_1000006381280006512800720.txt  0_00_32_866__0_00_35_200_1000006401280006112800720.txt  0_00_35_744__0_00_39_580_1000006401280006312800720.txt  0_00_39_581__0_00_43_042_1000006401280006312800720.txt  0_01_00_518__0_01_03_479_1000006401280006312800720.txt  0_01_04_105__0_01_07_900_1000006381280006512800720.txt  0_01_07_901__0_01_08_984_1000006441280005912800720.txt  0_01_13_239__0_01_15_407_1000006401280006012800720.txt  0_01_18_620__0_01_21_080_1000006371280006412800720.txt  0_01_21_122__0_01_23_874_1000006401280006312800720.txt  0_01_23_875__0_01_27_252_1000006311280007212800720.txt  0_01_36_221__0_01_37_846_1000006401280006312800720.txt  0_01_38_515__0_01_41_975_2000005901280011312800720.txt  0_02_07_836__0_02_13_715_2000005901280011312800720.txt  0_02_26_437__0_02_28_814_1000006361280006612800720.txt  0_02_28_815__0_02_32_109_1000006361280006712800720.txt  0_02_37_740__0_02_43_412_2000005901280011212800720.txt  0_02_50_420__0_02_52_796_1000006401280006012800720.txt  0_02_54_841__0_02_56_550_1000006421280006212800720.txt  0_02_56_551__0_02_59_094_1000006401280006312800720.txt  (+285 more)
(+481 files in other folders)
