[project]
name = "ocr"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "easyocr==1.7.1",
    "numpy<2",
    "opencv-python==4.8.1.78",
    "pytesseract==0.3.10",
    # OCR alternative backend (action_vietocr.py, --ensemble)
    "vietocr",
    # constrained LLM cleanup (llm_correct.py, --llm-correct)
    "transformers",
    "accelerate",
    "huggingface-hub[hf-xet]",
    "hf-transfer",
    "truststore",
    # GPU build (RTX 3060); sourced from the pytorch index below
    "torch==2.11.0+cu128",
    "torchvision==0.26.0+cu128",
]

# Pull torch/torchvision from PyTorch's CUDA 12.8 index (not PyPI), so `uv sync`
# keeps the GPU build instead of falling back to the CPU wheel.
[tool.uv.sources]
torch = { index = "pytorch-cu128" }
torchvision = { index = "pytorch-cu128" }

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true
